# py_boilerplate

./: MANIFEST.ini  README.md  README.rst  setup.cfg  setup.py  tox.ini
py_boilerplate/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
