[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 3.0
testpaths = tests

[coverage:run]
branch = True
source =
    py_boilerplate
    tests

[coverage:paths]
source =
    py_boilerplate
    .tox/*/lib/python*/site-packages/py_boilerplate
    .tox/pypy/site-packages/py_boilerplate

